# birdo

./: .gitignore  Birdo.desktop  CMakeLists.txt  CMakeLists.txt.autosave  MediaPlayer.qrc  Media_Player.pro  Media_Resources.qrc  OpenMedia.desktop  README.md  adjustapp.cpp  adjustapp.h  licnesce.txt  main.cpp  player.cpp  player.h  player.ui  ui_player.h  videocontrols.cpp  videocontrols.h  videowidget.cpp  videowidget.h
client/: appmanager.cpp  appmanager.h  main.cpp  settingsmanager.cpp
client/core/: adjustapp.cpp  adjustapp.h  birdo.qrc  customcursor.cpp  customcursor.h  defs.h  player.cpp  player.h  resources.qrc  videocontrols.cpp  videocontrols.h  videowidget.cpp  videowidget.h
client/core/ui/: player.ui
client/core/ui/qml/: Main.qml
client/core/ui/qml/Components/: CustomButton.qml  CustomSliderType.qml  RegularButtonType.qml  ToolTipType.qml  VideoPlayerType.qml  VideosDelegate.qml
client/core/ui/qml/Controls/: AudioControls.qml  BottomControls.qml  PlayList.qml  PlaybackSpeed.qml
client/filesManager/: filesManager.cpp  filesManager.h
client/model/: listmodel.cpp  listmodel.h
client/settings/: settingsManager.cpp  settingsManager.h
